<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textview1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/course"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCourseName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/textview1"
                android:text="@string/course_name"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/textview1" />

            <TextView
                android:id="@+id/textview2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textview1"
                android:layout_marginTop="10dp"
                android:text="@string/hours"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCourseHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvCourseName"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/textview2"
                android:text="5"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/textview2" />

            <TextView
                android:id="@+id/textview3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvCourseName"
                android:layout_marginStart="35dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/tvCourseHours"
                android:text="@string/points"
                android:textStyle="bold"
                android:layout_marginLeft="35dp"
                android:layout_toRightOf="@+id/tvCourseHours" />

            <TextView
                android:id="@+id/tvCoursePoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvCourseName"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/textview3"
                android:text="5"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/textview3" />

            <TextView
                android:id="@+id/textview4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textview2"
                android:layout_marginTop="10dp"
                android:text="@string/description"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCourseDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textview4"
                android:layout_marginTop="10dp"
                android:text="@string/dummy_text" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>