<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.shall.user.StudentProfileFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="50dp"
        app:cardElevation="3dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow android:layout_marginTop="10dp">

                <RelativeLayout android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/textview1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@+id/textview1"
                        android:text="@string/dummy_text" />
                </RelativeLayout>
            </TableRow>

            <TableRow>

                <RelativeLayout android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/textview2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@+id/textview2"
                        android:text="@string/dummy_text" />
                </RelativeLayout>
            </TableRow>

            <TableRow>

                <RelativeLayout android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/textview3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@+id/textview3"
                        android:text="@string/dummy_text" />
                </RelativeLayout>
            </TableRow>

            <TableRow>

                <RelativeLayout android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/textview4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@+id/textview4"
                        android:text="@string/dummy_text" />
                </RelativeLayout>
            </TableRow>

            <TableRow
                android:layout_marginTop="10dp"
                android:gravity="center">

                <RelativeLayout>

                    <Button
                        android:id="@+id/bUpdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/rectangle_rounded_corner_transparent_blue"
                        android:text="@string/update" />
                </RelativeLayout>
            </TableRow>
        </TableLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
