<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_backgrouns"
    tools:context="com.shall.LoginActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="100dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="7dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/ic_launcher" />


            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivLogo"
                android:backgroundTint="@color/colorPrimary"
                android:drawableStart="@drawable/ic_supervisor_account_blue_24dp"
                android:hint="@string/username" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etUsername"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/colorPrimary"
                android:drawableStart="@drawable/ic_lock_outline_blue_24dp"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/bLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/etPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/rectangle_rounded_corner_transparent_blue"
                android:text="@string/login" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
