<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forgot_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.shall.ForgotPasswordActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="100dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="7dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etUsername"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/password_is" />

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etUsername"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_toEndOf="@+id/textView"
                android:layout_toRightOf="@+id/textView"
                android:gravity="center"
                android:text=""
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="25dp"
                android:textAllCaps="false"
                android:background="@drawable/rectangle_rounded_corner_transparent_blue"
                android:text="@string/request_password" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorPrimary"
                android:drawableLeft="@drawable/ic_supervisor_account_blue_24dp"
                android:drawableStart="@drawable/ic_supervisor_account_blue_24dp"
                android:hint="@string/enter_username" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
